// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A H2 Element applies mediumWeight modifier 1`] = `
<h2
  className="sc-bdVaJa dVWMMw"
>
  Header Element
</h2>
`;

exports[`A H2 Element renders correctly 1`] = `
<h2
  className="sc-bdVaJa FryIb"
>
  Header Element
</h2>
`;
